--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta charset="UTF-8"> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>🥀 death0space.xyz</title>
-  <link rel="stylesheet" href="assets/style.css">
-  <link rel="shortcut icon" href="assets/icon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🥀 death0space.xyz</title>
+  <link rel="stylesheet" href="../assets/style.css">
+  <link rel="shortcut icon" href="../assets/icon.ico" type="image/x-icon">
 </head>
 <body>
       <div class="wrapper">
@@ -17,6 +17,6 @@
          <span></span>
       </div>
 
-  <script src="assets/random.js"></script>
+  <script src="../assets/random.js"></script>
 </body>
 </html>
